Styled hero page

--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,24 @@
-/* font-family: "Poppins", sans-serif;
- font-family: "Nunito", sans-serif;*/
-
+body {
+  background-color: #008080;
+}
 h1 {
-  color: blue;
   font-family: "Poppins", sans-serif;
+  color: #fef9f1;
+  font-size: 96px;
 }
 p {
   font-family: "Nunito", sans-serif;
+  color: #fef9f1;
+}
+img {
+  max-width: 400px;
+  max-height: 400px;
+}
+.hero {
+  width: 1440px;
+  height: 608px;
+}
+.hero-inner {
+  margin: 156px 156px;
+  gap: 32px;
 }
