--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 }
 .light-text {
   color: var(--text-color);
+  text-shadow: 1px 1px 2px rgb(160, 160, 160);
 }
 body {
   background-color: var(--primary-color);
