--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@
 body {
   background-color: var(--primary-color);
   font-family: var(--default-font-family);
+  color: var(--text-color);
 }
 h1,
 h2,
@@ -21,32 +22,35 @@ h3 {
   font-family: var(--heading-font-family);
 }
 h1 {
-  font-size: 96px;
+  font-size: 64px;
   line-height: 1.5;
   text-shadow: var(--text-shadow);
 }
 h2 {
   line-height: 1.5;
 }
-p {
-  color: var(--text-color);
+.name-title {
+  font-size: 96px;
+  line-height: 1.5;
+  text-shadow: var(--text-shadow);
 }
 .hero-inner {
   margin: 236px 156px;
   gap: 32px;
 }
 .name-title {
-  color: var(--text-color);
   letter-spacing: 0.5em;
-}
-.hero p {
-  color: var(--text-color);
 }
 .hero-image {
   max-width: 350px;
   max-height: 350px;
+  border-radius: 50%;
 }
-
+.about-image {
+  max-height: 350px;
+  max-width: 100%;
+  border-radius: 50%;
+}
 .project-slides {
   box-shadow: var(--box-shadow);
   padding-bottom: 36px;
@@ -72,6 +76,18 @@ p {
   text-align: center;
   box-shadow: var(--box-shadow);
 }
+.personal-links {
+  font-size: 48px;
+  gap: 64px;
+}
+.personal-links a {
+  color: var(--text-color);
+}
+.about-inner {
+  gap: 32px;
+  margin: 96px 156px 48px;
+}
+
 @media (max-width: 936px) {
   h1 {
     font-size: 40px;
