--- a/src/style.css
+++ b/src/style.css
@@ -87,7 +87,21 @@ h2 {
   gap: 32px;
   margin: 96px 156px 48px;
 }
-
+.toolkit img {
+  max-height: 48px;
+  max-width: 100%;
+}
+.toolkit {
+  justify-content: center;
+  gap: 36px;
+}
+.toolkit-container {
+  background-color: var(--text-color);
+  padding: 48px;
+  margin: 0 324px;
+  border-radius: 24px;
+  box-shadow: var(--box-shadow);
+}
 @media (max-width: 936px) {
   h1 {
     font-size: 40px;
