--- a/src/style.css
+++ b/src/style.css
@@ -29,17 +29,18 @@ h1 {
 h2 {
   line-height: 1.5;
 }
+.temp-link {
+  color: var(--text-color);
+}
 .name-title {
   font-size: 96px;
   line-height: 1.5;
   text-shadow: var(--text-shadow);
+  letter-spacing: 0.2em;
 }
 .hero-inner {
   margin: 236px 156px;
   gap: 32px;
-}
-.name-title {
-  letter-spacing: 0.5em;
 }
 .hero-image {
   max-width: 350px;
@@ -48,7 +49,7 @@ h2 {
 }
 .about-image {
   max-height: 350px;
-  max-width: 100%;
+  max-width: 350px;
   border-radius: 50%;
 }
 .project-slides {
@@ -83,24 +84,33 @@ h2 {
 .personal-links a {
   color: var(--text-color);
 }
-.about-inner {
+.about-page-inner {
   gap: 32px;
   margin: 96px 156px 48px;
 }
 .toolkit img {
   max-height: 48px;
-  max-width: 100%;
+  max-width: 48px;
 }
 .toolkit {
+  margin: 0 auto;
   justify-content: center;
   gap: 36px;
+  max-width: fit-content;
 }
+.toolkit-two img {
+  max-height: 48px;
+  max-width: 48px;
+}
+
 .toolkit-container {
   background-color: rgba(254, 249, 241, 0.8);
   padding: 48px;
-  margin: 0 324px;
   border-radius: 24px;
   box-shadow: var(--box-shadow);
+}
+.logo-text {
+  font-weight: 700;
 }
 @media (max-width: 936px) {
   h1 {
@@ -122,8 +132,23 @@ h2 {
   }
   .hero-image {
     margin: 0 auto;
+    max-width: 250px;
+    max-height: 250px;
   }
   .hero-text {
+    text-align: center;
+  }
+  .about-page-inner {
+    flex-direction: column;
+    margin: 16px auto;
+    padding: 100px, 5px;
+  }
+  .about-image {
+    margin: 0 auto;
+    max-width: 250px;
+    max-height: 250px;
+  }
+  .about-text {
     text-align: center;
   }
   .project-slides {
@@ -139,5 +164,12 @@ h2 {
     padding: 10px 12px;
     font-size: 12px;
     font-weight: 700;
+  }
+  .toolkit {
+    gap: 18px;
+  }
+  .toolkit img {
+    max-height: 32px;
+    max-width: 32px;
   }
 }
