--- a/src/style.css
+++ b/src/style.css
@@ -116,6 +116,8 @@ h2 {
   padding: 48px;
   border-radius: 24px;
   box-shadow: var(--box-shadow);
+  width: fit-content;
+  margin: 0 auto;
 }
 .logo-text {
   font-weight: 700;
