--- a/src/style.css
+++ b/src/style.css
@@ -53,9 +53,10 @@ h2 {
 }
 .skills li {
   list-style: none;
+  text-align: center;
 }
 .skills-text {
-  font-size: 10px;
+  font-size: 8px;
   font-weight: 500;
   background-color: var(--primary-color);
   padding: 2px 4px;
@@ -99,14 +100,14 @@ h2 {
 .toolkit-title {
   letter-spacing: 0.2em;
 }
-.toolkit img {
-  max-height: 48px;
-  max-width: 48px;
+.skills img {
+  max-height: 54px;
+  max-width: 54px;
 }
 .toolkit {
   margin: 0 auto;
   justify-content: center;
-  gap: 24px;
+  gap: 12px;
 }
 .down-icon {
   font-size: 36px;
@@ -114,15 +115,14 @@ h2 {
 
 .skills-container {
   background-color: rgba(254, 249, 241, 0.8);
-  padding: 48px;
+  padding: 24px;
   border-radius: 24px;
   box-shadow: var(--box-shadow);
   width: fit-content;
+  justify-content: center;
   margin: 0 auto;
 }
-.logo-text {
-  font-weight: 700;
-}
+
 @media (max-width: 936px) {
   h1 {
     font-size: 40px;
