--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,11 @@ h2 {
   border-radius: 50%;
   box-shadow: var(--box-shadow);
 }
+ul {
+  padding: 24px;
+  margin: 0;
+}
+
 .skills li {
   list-style: none;
   text-align: center;
@@ -61,6 +66,7 @@ h2 {
 .skills-text {
   font-size: 8px;
   font-weight: 500;
+  text-align: center;
   background-color: var(--primary-color);
   padding: 2px 4px;
   font-family: var(--heading-font-family);
@@ -122,7 +128,6 @@ h2 {
   border-radius: 24px;
   box-shadow: var(--box-shadow);
   width: fit-content;
-  justify-content: center;
   margin: 0 auto;
 }
 
@@ -138,6 +143,9 @@ h2 {
   }
   p {
     font-size: 14px;
+  }
+  ul {
+    padding: 12px;
   }
   .name-title {
     font-size: 60px;
@@ -178,7 +186,9 @@ h2 {
     font-size: 12px;
     font-weight: 700;
   }
-
+  .skills-text {
+    display: none;
+  }
   .toolkit {
     gap: 18px;
   }
