--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,8 @@ body {
 }
 h1,
 h2,
-h3 {
+h3,
+h4 {
   font-family: var(--heading-font-family);
   text-shadow: var(--text-shadow);
 }
@@ -26,6 +27,7 @@ h1 {
   font-size: 60px;
   line-height: 1.5;
   letter-spacing: 0.2em;
+  text-transform: uppercase;
 }
 h2 {
   line-height: 1.5;
@@ -129,6 +131,17 @@ ul {
   box-shadow: var(--box-shadow);
   width: fit-content;
   margin: 0 auto;
+}
+.slide-links {
+  gap: 24px;
+}
+.slide-logos {
+  max-width: 100%;
+  max-height: 48px;
+}
+.sandbox-logo {
+  max-width: 100%;
+  max-height: 80px;
 }
 
 @media (max-width: 992px) {
