--- a/src/style.css
+++ b/src/style.css
@@ -7,10 +7,6 @@
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   --text-shadow: 1px 1px 2px rgb(160, 160, 160);
 }
-.light-text {
-  color: var(--text-color);
-  text-shadow: var(--text-shadow);
-}
 body {
   background-color: var(--primary-color);
   font-family: var(--default-font-family);
@@ -33,8 +29,16 @@ h2 {
   font-size: 28px;
   line-height: 1.5;
 }
+ul {
+  padding: 24px;
+  margin: 0;
+}
 .temp-link {
   color: var(--text-color);
+}
+.light-text {
+  color: var(--text-color);
+  text-shadow: var(--text-shadow);
 }
 .hero {
   padding-bottom: 96px;
@@ -71,10 +75,6 @@ h2 {
   font-family: var(--default-font-family);
   text-transform: lowercase;
   font-size: 40px;
-}
-ul {
-  padding: 24px;
-  margin: 0;
 }
 
 .skills li {
@@ -186,6 +186,9 @@ ul {
   h3 {
     font-size: 24px;
   }
+  h4 {
+    font-size: 18px;
+  }
   p {
     font-size: 14px;
   }
@@ -206,11 +209,24 @@ ul {
   .about-me-inner {
     flex-direction: column;
   }
+  .contact-inner {
+    flex-direction: column;
+  }
   .hero-image,
   .about-me-image {
     margin: 0 auto;
     max-width: 250px;
     max-height: 250px;
+  }
+  .hello-text {
+    font-size: 72px;
+  }
+  .personal-links {
+    font-size: 38px;
+    gap: 48px;
+  }
+  .contact-heading {
+    font-size: 32px;
   }
   .hero-text,
   .about-me-text {
@@ -241,8 +257,12 @@ ul {
     max-height: 32px;
     max-width: 32px;
   }
+  .coding-links {
+    gap: 24px;
+    padding: 8px 16px;
+    border-radius: 12px;
+  }
 }
-
 @media (min-width: 993px) and (max-width: 1200px) {
   .hero-inner {
     margin: 144px 48px;
