--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #008080 !important;
   --secondary-color: #0076ba !important;
-  --text-color: rgb(254, 249, 241);
+  --text-light: rgb(254, 249, 241) !important;
   --heading-font-family: "Poppins", sans-serif;
   --default-font-family: "Nunito", sans-serif;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
@@ -10,7 +10,7 @@
 body {
   background-color: var(--primary-color);
   font-family: var(--default-font-family);
-  color: var(--text-color);
+  color: var(--text-light);
 }
 h1,
 h2,
@@ -34,10 +34,10 @@ ul {
   margin: 0;
 }
 .temp-link {
-  color: var(--text-color);
+  color: var(--text-light);
 }
 .light-text {
-  color: var(--text-color);
+  color: var(--text-light);
   text-shadow: var(--text-shadow);
 }
 .hero {
@@ -110,7 +110,7 @@ ul {
   border-radius: 16px;
   background-color: #0076ba;
   padding: 16px 20px;
-  color: var(--text-color);
+  color: var(--text-light);
   font-weight: 600;
   text-decoration: none;
   text-transform: capitalize;
@@ -122,7 +122,7 @@ ul {
   gap: 96px;
 }
 .personal-links a {
-  color: var(--text-color);
+  color: var(--text-light);
 }
 
 .toolkit-title {
