--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,10 @@ ul {
   padding: 24px;
   margin: 0;
 }
+footer {
+  margin-left: 24px;
+  margin-right: 24px;
+}
 .ljf-logo {
   max-height: 42px;
   max-width: 100%;
@@ -55,12 +59,12 @@ ul {
   font-size: 72px;
 }
 .hero-inner {
-  margin: 156px 156px;
+  margin: 118px 156px;
   gap: 32px;
 }
 .about-me-inner {
   gap: 56px;
-  margin: 96px 156px 48px;
+  margin: 42px 156px 42px;
 }
 .contact-inner {
   gap: 112px;
@@ -180,7 +184,6 @@ ul {
   gap: 36px;
   padding: 12px 24px;
   border-radius: 24px;
-
   background-color: rgba(254, 249, 241, 0.8);
   box-shadow: var(--box-shadow);
 }
@@ -270,6 +273,13 @@ ul {
     font-size: 12px;
     font-weight: 700;
   }
+  .slide-links {
+    gap: 12px;
+  }
+  .slide-logos {
+    width: 100%;
+    height: 32px;
+  }
   .skills-text {
     display: none;
   }
@@ -281,7 +291,7 @@ ul {
     max-width: 32px;
   }
   .coding-links {
-    gap: 24px;
+    gap: 14px;
     padding: 8px 16px;
     border-radius: 12px;
   }
