--- a/src/style.css
+++ b/src/style.css
@@ -141,13 +141,13 @@ footer {
   letter-spacing: 0.2em;
 }
 .skills img {
-  max-height: 54px;
-  max-width: 54px;
+  max-height: 52px;
+  max-width: 52px;
 }
 .toolkit {
   margin: 0 auto;
   justify-content: center;
-  gap: 12px;
+  gap: 4px;
 }
 .down-icon {
   font-size: 36px;
@@ -155,7 +155,7 @@ footer {
 
 .skills-container {
   background-color: rgba(254, 249, 241, 0.8);
-  padding: 24px;
+  padding: 18px;
   border-radius: 24px;
   box-shadow: var(--box-shadow);
   width: fit-content;
@@ -165,12 +165,8 @@ footer {
   gap: 24px;
 }
 .slide-logos {
-  width: 100%;
-  height: 48px;
-}
-.sandbox-logo {
   max-width: 100%;
-  max-height: 80px;
+  max-height: 48px;
 }
 .hello-text {
   font-size: 146px;
@@ -284,9 +280,9 @@ footer {
     display: none;
   }
   .toolkit {
-    gap: 18px;
+    gap: 4px;
   }
-  .toolkit img {
+  .skills img {
     max-height: 32px;
     max-width: 32px;
   }
