--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,9 @@ footer {
 }
 a {
   color: var(--text-light);
+  text-decoration: none;
+  font-weight: 750;
+  text-shadow: var(--text-shadow);
 }
 .ljf-logo {
   max-height: 42px;
@@ -84,7 +87,7 @@ a {
   padding: 48px;
   border-radius: 50%;
   box-shadow: var(--box-shadow);
-  background-color: rgb(0, 128, 140);
+  background-color: rgb(1, 189, 186, 0.5);
 }
 .contact-heading {
   font-family: var(--default-font-family);
@@ -199,6 +202,17 @@ a {
 .footer-email-icon {
   font-size: 24px;
 }
+.footer-paragraph {
+  font-size: 12px;
+  background-color: rgb(1, 189, 186, 0.5);
+  padding: 4px 8px;
+  margin: 12px auto;
+  max-width: 100%;
+  border-radius: 6px;
+}
+.footer-paragraph a {
+  font-weight: 500;
+}
 .footer-logos {
   max-height: 42px;
   max-width: 100%;
@@ -304,6 +318,9 @@ a {
     gap: 14px;
     padding: 8px 16px;
     border-radius: 12px;
+  }
+  .footer-paragraph {
+    display: column;
   }
 }
 @media (min-width: 993px) and (max-width: 1200px) {
