--- a/src/style.css
+++ b/src/style.css
@@ -127,7 +127,7 @@ p {
 .project-description {
   padding: 0 36px;
 }
-.project-link {
+.project-button {
   border-radius: 16px;
   background-color: #0076ba;
   padding: 16px 20px;
@@ -174,10 +174,10 @@ p {
   width: fit-content;
   margin: 0 auto;
 }
-.slide-links {
+.project-links {
   gap: 24px;
 }
-.slide-logos {
+.external-logos {
   max-width: 100%;
   max-height: 48px;
 }
@@ -300,10 +300,10 @@ p {
     font-size: 12px;
     font-weight: 700;
   }
-  .slide-links {
+  .project-links {
     gap: 12px;
   }
-  .slide-logos {
+  .external-logos {
     width: 100%;
     height: 32px;
   }
