--- a/src/style.css
+++ b/src/style.css
@@ -19,16 +19,15 @@ h3,
 h4 {
   font-family: var(--heading-font-family);
   text-shadow: var(--text-shadow);
+  line-height: 1.5;
 }
 h1 {
   font-size: 60px;
-  line-height: 1.5;
   letter-spacing: 0.2em;
   text-transform: uppercase;
 }
 h2 {
   font-size: 28px;
-  line-height: 1.5;
 }
 ul {
   padding: 24px;
@@ -68,7 +67,7 @@ footer {
 .hero-image,
 .about-image {
   max-width: 350px;
-  max-height: 350px;
+  max-height: 100%;
   border-radius: 50%;
   box-shadow: var(--box-shadow);
 }
@@ -92,7 +91,6 @@ footer {
   border-radius: 16px;
   background-color: #0076ba;
   font-weight: 600;
-  color: var(--text-light);
   text-align: center;
   text-decoration: none;
   box-shadow: var(--box-shadow);
@@ -112,7 +110,7 @@ footer {
 .about-toolkit-box {
   width: fit-content;
   margin: 0 auto;
-  padding: 18px;
+  padding: 18px 36px;
   border-radius: 24px;
   background-color: rgba(254, 249, 241, 0.8);
   box-shadow: var(--box-shadow);
@@ -161,7 +159,7 @@ footer {
 .hello-text {
   font-weight: 400;
   font-size: 146px;
-  font-style: normal;
+  font-style: italic;
 }
 .contact-heading {
   font-family: var(--default-font-family);
@@ -172,9 +170,7 @@ footer {
   gap: 96px;
   font-size: 48px;
 }
-.personal-links a {
-  color: var(--text-light);
-}
+
 .down-pointer {
   font-size: 20px;
 }
@@ -193,7 +189,6 @@ footer {
   font-size: 28px;
 }
 .footer-email-link {
-  vertical-align: bottom;
   font-size: 18px;
 }
 .footer-logos {
@@ -202,7 +197,6 @@ footer {
 }
 .linkedin-logo {
   font-size: 42px;
-  color: var(--text-light);
 }
 .footer-paragraph {
   max-width: 100%;
