Applied css to project-links img

--- a/src/style.css
+++ b/src/style.css
@@ -102,7 +102,10 @@ footer {
   box-shadow: var(--box-shadow);
   text-transform: capitalize;
 }
-
+.project-links img {
+  max-height: 42px;
+  max-width: 100%;
+}
 .about-inner {
   margin: 42px 156px 42px;
   gap: 56px;
