--- a/src/style.css
+++ b/src/style.css
@@ -78,7 +78,7 @@ footer {
   box-shadow: var(--box-shadow);
 }
 .project-card {
-  height: 100%;
+  height: 1footer00%;
   padding-bottom: 36px;
   border-radius: 12px;
   box-shadow: var(--box-shadow);
@@ -102,7 +102,7 @@ footer {
   box-shadow: var(--box-shadow);
   text-transform: capitalize;
 }
-.external-logos img {
+.-logos img {
   height: 42px;
   width: 100%;
 }
@@ -153,8 +153,8 @@ footer {
   gap: 24px;
 }
 .external-logos {
+  max-height: 42px;
   max-width: 100%;
-  max-height: 48px;
 }
 
 .contact-inner {
