--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
 :root {
   --primary-color: #008080 !important;
-  --secondary-color: #0076ba !important;
+  --secondary-color: #0c6186 !important;
   --heading-font-family: "Poppins", sans-serif;
   --default-font-family: "Nunito", sans-serif;
   --text-light: #fef9f1;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-  --text-shadow: 1px 1px 2px rgb(160, 160, 160);
+  --text-shadow: 1px 1px 2px hwb(0 63% 37%);
 }
 body {
   background-color: var(--primary-color);
@@ -95,7 +95,7 @@ footer {
 .project-button {
   padding: 16px 20px;
   border-radius: 16px;
-  background-color: #0076ba;
+  background-color: #0c6186;
   font-weight: 600;
   text-align: center;
   text-decoration: none;
