--- a/src/style.css
+++ b/src/style.css
@@ -115,7 +115,7 @@ footer {
   letter-spacing: 0.2em;
 }
 .about-toolkit-box {
-  width: fit-content;
+  max-width: 800px;
   margin: 0 auto;
   padding: 18px 36px;
   border-radius: 24px;
